# lispexp

./: .gitmodules  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md
.claude/skills/lispexp-release-prep/: SKILL.md
.claude/skills/sexpp-release-prep/: SKILL.md
.github/workflows/: ci.yml  release-emacs.yml  release.yml
crates/lispexp-emacs/: CHANGELOG.md  Cargo.toml  README.md
crates/lispexp-emacs-indent/: CHANGELOG.md  Cargo.toml  README.md
crates/lispexp-emacs-indent/src/: lib.rs
crates/lispexp-emacs/src/: dir_locals.rs  indent.rs  lib.rs  local_vars.rs
docs/: design.md
docs/adr/: 0001-reader-only-scope.md  0002-preserve-reader-macro-notation.md  0003-options-struct-not-dialect-enum-switch.md  0004-top-level-error-recovery-granularity.md  0005-brackets-ordinary-variant-for-islisp.md  0006-generalize-options-for-extended-dialects.md  0007-configurable-block-comment-delimiters.md  0008-zero-copy-borrowed-tree.md  0009-list-carries-optional-dotted-tail.md  0010-round-trip-target-verbatim.md  0011-open-hash-tags-and-datum-labels.md  0012-passive-lang-line-and-dialect-selection.md  0013-pure-rust-no-unsafe-minimal-deps.md  0014-bracket-strings-for-hy.md  0015-public-lexer-layer-for-non-tree-consumers.md  0016-character-roles-are-a-per-dialect-table.md  0017-utf8-only-encoding-is-a-consumer-concern.md  0018-emacs-lisp-shorthands-read-verbatim.md  0019-definition-form-annotator.md  0020-per-dialect-definition-registries-hybrid-ownership.md  0021-dispatch-form-qualifiers-and-specializers.md  0022-indent-spec-is-an-independent-symbol-table.md  0023-structured-error-kind-and-positioned-reparse.md  0024-line-index-uses-byte-columns.md  0025-edn-is-a-data-only-preset-layered-on-clojure.md  0026-code-vs-data-walker.md  0027-scheme-superset-tolerant-reader.md  0028-depth-capped-recursion.md  0029-dialect-identity-implementations-standards-and-data-formats.md  0030-faithful-reader-not-a-validator.md  0031-scheme-family-annotator-and-syntax-rules-harvest.md  0032-cross-family-defmacro-harvester.md  0033-bundled-emacs-indent-data-in-a-sub-crate.md  0034-explicit-content-aware-dialect-detection.md
docs/cccc/: scheme-dialect-triage.md  sexpr-reader-requirements.md
docs/notes/: 20260704-reader-faithfulness-and-dialect-corpora.md
docs/ssss/: scheme-dialect-triage.md
examples/: dialect_by_extension.rs  find_definitions.rs  harvest_project_macros.rs  lex_tokens.rs  walk_code_nodes.rs
src/: annotate.rs  datum.rs  detect.rs  error.rs  indent.rs  lexer.rs  lib.rs  line_index.rs  options.rs  reader.rs  span.rs  token.rs  walk.rs
tests/: annotate.rs  clojure.rs  commonlisp.rs  corpus.rs  dispatch.rs  edn.rs  emacslisp.rs  error_kind.rs  fennel.rs  guile.rs  islisp.rs  janet_hy_autolisp.rs  lexer.rs  lfe.rs  options.rs  phel.rs  racket.rs  reader.rs  recovery.rs  registries.rs  scheme_superset.rs  span.rs
