[package]
name = "sexpp"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "DEPRECATED: renamed to `lispexp`. A pure-Rust reader (lexer + parser) for S-expression syntax across many Lisp dialects."
readme = "README.md"
repository = "https://github.com/rigortype/lispexp"
authors = ["USAMI Kenta <tadsan@zonu.me>"]
keywords = ["lisp", "s-expression", "parser", "scheme", "reader"]
categories = ["parser-implementations"]
# The corpus submodules under tests/corpus/ are large third-party checkouts used
# only for local conformance testing — never ship them in the published package.
exclude = ["/tests/corpus", "/AGENTS.md", "/docs/agents", "/.github", "/.claude"]

[dependencies]
