[package]
name = "lispexp"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "A pure-Rust reader (lexer + parser) for S-expression syntax across many Lisp dialects"
readme = "README.md"
repository = "https://github.com/rigortype/lispexp"
authors = ["USAMI Kenta <tadsan@zonu.me>"]
keywords = ["lisp", "s-expression", "parser", "scheme", "reader"]
categories = ["parser-implementations"]
# The corpus submodules under tests/corpus/ are large third-party checkouts used
# only for local conformance testing — never ship them in the published package.
exclude = ["/tests/corpus", "/AGENTS.md", "/docs/agents", "/docs/ssss", "/.github", "/.claude"]

[dependencies]
