[package]
name = "lispexp"
version = "0.7.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "A pure-Rust reader (lexer + parser) for S-expression syntax across many Lisp dialects"
readme = "README.md"
repository = "https://github.com/rigortype/lispexp"
authors = ["USAMI Kenta <tadsan@zonu.me>"]
keywords = ["lisp", "s-expression", "parser", "scheme", "reader"]
categories = ["parser-implementations"]
# The corpus submodules under tests/corpus/ are large third-party checkouts used
# only for local conformance testing — never ship them in the published package.
exclude = ["/tests/corpus", "/AGENTS.md", "/docs/agents", "/docs/cccc", "/.github", "/.claude"]

[dependencies]

[workspace]
# The root `lispexp` package is an implicit member. The companion crate holds
# bulk, editor-version-specific bundled data kept out of the neutral core
# (ADR-0033).
members = ["crates/lispexp-emacs"]
resolver = "2"
